# Polymarket-kalshi-Arbitrage-Bot

./: .gitignore  Cargo.toml  README.md  kalshi_team_cache.json
docs/: 01-getting-started.md  02-configuration.md  03-trading-strategy.md  README.md
scripts/: build_sports_cache.py
src/: cache.rs  circuit_breaker.rs  config.rs  discovery.rs  execution.rs  kalshi.rs  lib.rs  main.rs  polymarket.rs  polymarket_clob.rs  position_tracker.rs  types.rs
tests/: integration_tests.rs
